# muon

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  muon_demo.ipynb  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_commit.py  test_implementation.py
.github/workflows/: ci.yml
scripts/: analyze_results.py  display_results.py  smoke_test.py  train_tasks.py  visualize_results.py
src/: __init__.py  dataset.py  model.py  optimizer.py  test_hooks.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_dataset.py  test_grokking.py  test_integration.py  test_model.py  test_optimizer.py
